--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: medi_support
 description: A Medical information forum
-publish_to: 'none' 
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: ">=3.1.3 <4.0.0"
 
 dependencies:
   cupertino_icons: ^1.0.2
@@ -13,7 +13,6 @@ dependencies:
   fpdart: ^1.1.0
   freezed_annotation: ^2.4.1
   json_annotation: ^4.9.0
-
 
 dev_dependencies:
   build_runner: ^2.4.9
@@ -25,8 +24,3 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-        
-    
-    
-                                      
