--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=3.1.3 <4.0.0"
 
 dependencies:
+  collection: ^1.18.0
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
