feat: init riverpod with example

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -6,6 +6,8 @@ analyzer:
     - build/**
     - lib/*.g.dart
     - lib/*.freezed.dart
+  plugins: 
+    - custom_lint
 
   language: 
     strict-raw-types: true
