--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,17 +11,22 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.5.1
   fpdart: ^1.1.0
   freezed_annotation: ^2.4.1
   json_annotation: ^4.9.0
+  riverpod_annotation: ^2.3.5
 
 dev_dependencies:
   build_runner: ^2.4.9
+  custom_lint: ^0.6.4
   flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
   freezed: ^2.5.2
   json_serializable: ^6.8.0
+  riverpod_generator: ^2.4.0
+  riverpod_lint: ^2.3.10
 
 flutter:
   uses-material-design: true
