--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   fpdart: ^1.1.0
   freezed_annotation: ^2.4.1
+  go_router: ^14.1.4
   json_annotation: ^4.9.0
   riverpod_annotation: ^2.3.5
 
