--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=3.1.3 <4.0.0"
 
 dependencies:
+  cached_network_image: ^3.0.0
   collection: ^1.18.0
   cupertino_icons: ^1.0.2
   flutter:
@@ -32,4 +33,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/
+    - assets/
