--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,10 @@ environment:
 
 dependencies:
   cached_network_image: ^3.0.0
+  cloud_firestore: ^5.0.1
   collection: ^1.18.0
   cupertino_icons: ^1.0.2
+  firebase_core: ^3.1.0
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
