--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
-  fpdart: ^1.1.0
   freezed_annotation: ^2.4.1
   go_router: ^14.1.4
   json_annotation: ^4.9.0
   riverpod_annotation: ^2.3.5
+  uuid: ^4.4.0
 
 dev_dependencies:
   build_runner: ^2.4.9
