--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,5 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-# firebase credentials
-lib/ui/screens/chat/helper/serviceAccountKey.json
+# firebase
+/helper/
