--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
+  flutter_svg: ^2.0.10+1
   freezed_annotation: ^2.4.1
   go_router: ^14.1.4
   json_annotation: ^4.9.0
@@ -35,3 +36,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets: 
+    - assets/svg/
