--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   go_router: ^14.1.4
   json_annotation: ^4.9.0
+  mockito: ^5.4.4
   riverpod_annotation: ^2.3.5
   uuid: ^4.4.0
 
