--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   freezed_annotation: ^2.4.1
   go_router: ^14.1.4
+  intl: ^0.19.0
   json_annotation: ^4.9.0
   riverpod_annotation: ^2.3.5
   uuid: ^4.4.0
