--- a/app/ios/Runner/GoogleService-Info.plist
+++ b/app/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>de.htwg.mobi.mobileAnwendungen</string>
+	<string>de.htwg.moba.medi_support</string>
 	<key>PROJECT_ID</key>
 	<string>mobile-anwendungen-4ab02</string>
 	<key>STORAGE_BUCKET</key>
