--- a/app/macos/Runner/Configs/AppInfo.xcconfig
+++ b/app/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = mobile_anwendungen
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = de.htwg.mobi.mobileAnwendungen
+PRODUCT_BUNDLE_IDENTIFIER = de.htwg.moba.medi_support
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 de.htwg.mobi. All rights reserved.
