--- a/app/android/app/src/main/AndroidManifest.xml
+++ b/app/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package= "de.htwg.moba.medisupport">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package= "de.htwg.moba.medi_support">
     <application
         android:label="medi_support"
         android:name="${applicationName}"
