--- a/maestro/search_post_flow.yaml
+++ b/maestro/search_post_flow.yaml
@@ -2,6 +2,6 @@ appId: de.htwg.moba.medi_support
 ---
 # Precondition: App started and on Homescreen
 - tapOn: "Search"
-- tapOn: "Search"
+- tapOn: "Type to search"
 - inputText: "aua"
 - tapOn: "meine lunge tut weh\naua"
