--- a/maestro/send_chat_message_flow.yaml
+++ b/maestro/send_chat_message_flow.yaml
@@ -1,7 +1,7 @@
 appId: de.htwg.moba.medi_support
 ---
 # Precondition: App started and on Homescreen
-- tapOn: "Chat\nTab 3 of 4"
+- tapOn: "Chats\nTab 3 of 4"
 - tapOn:
     point: "50%,22%"
 - tapOn: "Type a message"
