--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -5,6 +5,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=3.1.3 <4.0.0"
+  flutter: "3.22.0"
 
 dependencies:
   cached_network_image: ^3.0.0
@@ -38,5 +39,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  assets: 
+  assets:
     - assets/svg/
